--- a/contact.html
+++ b/contact.html
@@ -22,12 +22,27 @@
         </li>
     </ul>
 </nav>
-<h>This is my bootstarp 4 page </h>
-<p>kajsnaa mksajdka kajskna, nwskam aknsandk fjksn efjsk adjkaj jdhaksnd adhjk kjdkas  </p>
-
-
-
+<div class="container">
+    <h2>feel free to contact with us </h2>
+    <form action="/action_page.php">
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+        </div>
+        <div class="form-group">
+            <label for="phn">phn:</label>
+            <input type="phn" class="form-control" id="phn" placeholder="Enter phn number" name="phn number">
+        </div>
+        <div class="form-group">
+            <label for="message">message:</label>
+            <input type="Message" class="form-control" id="Message" placeholder="Enter Message" name="Message">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</div>
 
 </body>
 </html>
+
+
 
